// Code generated by ExtendedBatchMigrator. DO NOT EDIT.
// Batch: BASIC_OTHER
// Generated: 2026-02-12 20:33:32

syntax = "proto3";

package dnf.v1;

option java_multiple_files = true;
option java_outer_classname = "BASIC_OTHERProto";
option java_package = "com.dnfm.mina.protobuf.basic_other";


message BattleleagueCardlistMessage {
}

message BattleleagueEmptyOtherpartyMessage {
}

message BattleleagueNextDungeonMessage {
}

message BattleleagueOtherPveResultMessage {
}

message BattleleaguePartyLoadingSucessMessage {
}

message BattleleaguePveDestroySummonstoneMessage {
}

message BattleleaguePvpRecordCompleteMessage {
}

message BattleleagueSelectCardMessage {
}

message BattleleagueSyncContributeMessage {
}

message BattleleagueTeamRandomCardMessage {
}

message BattleleagueTransitionCardMessage {
}

message BattleleagueUseItemMessage {
}

message BoardGameEmoticonMessage {
}

message BoardGameMessageMessage {
}

message BoardGamePlayerStatusMessage {
}

message BoardGameSyncMessage {
}

message BoardGameSyncHpMessage {
}

message BreakPartyMessage {
}

message ChangePartyLeaderToLockstepMessage {
}

message ChivalryChangeGradeMessage {
}

message ChivalryGetLikeMessage {
}

message ChivalryLikeMessage {
}

message ChivalryRewardMessage {
}

message ContentRollingNoticeMessage {
}

message CustomGameRoomSettingMessage {
}

message DailyResetMessage {
}

message DragonBoardClearBossMessage {
}

message DragonBoardMoveMessage {
}

message DragonBoardResultMessage {
}

message DragonBoardSelectedOrderCardMessage {
}

message DragonBoardStartMessage {
}

message FailedToAcquireTimeboxMessage {
}

message FriendsInfoMessage {
}

message GetLocalRewardMessage {
}

message GuildFishingDisasterMessage {
}

message GuildMemberGradeMessage {
}

message GuildNpcListMessage {
}

message GuildProhibitMessage {
}

message GuildRedpacketAddMessage {
}

message GuildRefreshHistoryMessage {
}
