// Code generated by ExtendedBatchMigrator. DO NOT EDIT.
// Batch: BASIC_OTHER
// Generated: 2026-02-12 20:33:32

syntax = "proto3";

package dnf.v1;

option java_multiple_files = true;
option java_outer_classname = "BASIC_OTHERProto";
option java_package = "com.dnfm.mina.protobuf.basic_other";


message GuildStructureListMessage {
}

message GuildWarehouseLoadMessage {
}

message HistoricsiteBuyRelicMessage {
}

message HistoricsiteChangeStaffMessage {
}

message HistoricsiteRegisteredEnterCountMessage {
}

message IntrudeInfoMessage {
}

message InviteRoomMessage {
}

message JoinRoomMessage {
}

message MultiPlayDungeonSelectRewardCardMessage {
}

message MultiPlayRequestMatchCancelMessage {
}

message PartyBattleLeagueMessage {
}

message PartyCancelInvitationMessage {
}

message PartyChangeLeaderMessage {
}

message PartyChangeSettingMessage {
}

message PartyConnectionStatusMessage {
}

message PartyInfoMessage {
}

message PartyInviteMessage {
}

message PartyJoinMessage {
}

message PartyJoinSuccessMessage {
}

message PartyKickMemberMessage {
}

message PartyLeaveMessage {
}

message PartyRefuseMessage {
}

message PartyRelayMessage {
}

message PartyRequestToJoinMessage {
}

message PartySpecialCategoryItemIndexMessage {
}

message PartyStartMatchingMessage {
}

message PartyUpdateMessage {
}

message PartyUpdateMemberMessage {
}

message ProposalMessage {
}

message PvpCharacterSelectMessage {
}

message RaidBuyBuffMessage {
}

message RaidCoinInfoMessage {
}

message RaidPartyLeaderSurrenderMessage {
}

message RaidRetryMessage {
}

message RaidUseBuffMessage {
}

message ReturnToTownAtMultiPlayMessage {
}

message RotationPvpInfoMessage {
}

message SelectOtherDungeonAtMultiMessage {
}

message SyncDungeonStartTimeMessage {
}

message UpdateGuildPointMessage {
}
